[gd_scene load_steps=23 format=3 uid="uid://dp56fmpt2l14o"]

[ext_resource type="Script" path="res://scenes/event_tab.gd" id="1_ri0d5"]
[ext_resource type="FontFile" uid="uid://dqqcurrqs4ko0" path="res://assets/ByteBounce.ttf" id="2_jxggd"]
[ext_resource type="Texture2D" uid="uid://bcbmxt3sbbajb" path="res://assets/lista_eventi.png" id="2_uqtvl"]
[ext_resource type="Texture2D" uid="uid://kn34nwtgnhnt" path="res://assets/disegno_bottoni.png" id="3_b5sla"]
[ext_resource type="Script" path="res://scenes/Button1event.gd" id="4_q3dog"]
[ext_resource type="Script" path="res://scenes/Button2event.gd" id="5_qv0yy"]
[ext_resource type="Script" path="res://scenes/Button3event.gd" id="6_o86is"]
[ext_resource type="Script" path="res://scenes/Button4event.gd" id="7_o8tew"]
[ext_resource type="Script" path="res://scenes/Button5event.gd" id="8_w4ah8"]
[ext_resource type="Script" path="res://scenes/close_button.gd" id="9_40bqh"]
[ext_resource type="AudioStream" uid="uid://dcfdagc84f6rb" path="res://assets/sounds/CLICK/CLICK 2.wav" id="11_hp1fr"]
[ext_resource type="AudioStream" uid="uid://c6vjry72injmk" path="res://assets/sounds/CLICK/CLICK 1.wav" id="12_xtfxa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ng2fn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uvye1"]
texture = ExtResource("3_b5sla")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
region_rect = Rect2(1, 55, 38, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0af1l"]
texture = ExtResource("3_b5sla")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
region_rect = Rect2(42, 85, 38, 14)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1jtvc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hb4lm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_grppt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yxdqc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bay67"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1vvlr"]
texture = ExtResource("3_b5sla")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
region_rect = Rect2(42, 70, 19, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aacpa"]
texture = ExtResource("3_b5sla")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
region_rect = Rect2(42, 40, 19, 14)

[node name="EventTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ri0d5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(581, 309)
scale = Vector2(3.10833, 3.10833)
texture = ExtResource("2_uqtvl")

[node name="Button1" type="Button" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 217.0
offset_right = 558.0
offset_bottom = 253.0
scale = Vector2(0.65955, 1.27396)
theme_override_fonts/font = ExtResource("2_jxggd")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_ng2fn")
theme_override_styles/hover = SubResource("StyleBoxTexture_uvye1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0af1l")
theme_override_styles/normal = SubResource("StyleBoxTexture_uvye1")
text = "event1"
script = ExtResource("4_q3dog")

[node name="TextureRect" type="TextureRect" parent="Button1"]
layout_mode = 0
offset_left = 60.6474
offset_top = -4.70973
offset_right = 152.647
offset_bottom = 39.2903

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 217.0
offset_right = 733.0
offset_bottom = 253.0
scale = Vector2(0.65955, 1.27396)
theme_override_fonts/font = ExtResource("2_jxggd")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_1jtvc")
theme_override_styles/hover = SubResource("StyleBoxTexture_uvye1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0af1l")
theme_override_styles/normal = SubResource("StyleBoxTexture_uvye1")
text = "event2"
script = ExtResource("5_qv0yy")

[node name="TextureRect" type="TextureRect" parent="Button2"]
layout_mode = 0
offset_left = 60.6474
offset_top = -4.70973
offset_right = 152.647
offset_bottom = 39.2903

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 682.0
offset_top = 217.0
offset_right = 899.0
offset_bottom = 252.0
scale = Vector2(0.65955, 1.27396)
theme_override_fonts/font = ExtResource("2_jxggd")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_hb4lm")
theme_override_styles/hover = SubResource("StyleBoxTexture_uvye1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0af1l")
theme_override_styles/normal = SubResource("StyleBoxTexture_uvye1")
text = "event3"
script = ExtResource("6_o86is")

[node name="TextureRect" type="TextureRect" parent="Button3"]
layout_mode = 0
offset_left = 60.6474
offset_top = -4.70973
offset_right = 152.647
offset_bottom = 39.2903

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 338.0
offset_top = 292.0
offset_right = 559.0
offset_bottom = 328.0
scale = Vector2(0.65955, 1.27396)
theme_override_fonts/font = ExtResource("2_jxggd")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_grppt")
theme_override_styles/hover = SubResource("StyleBoxTexture_uvye1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0af1l")
theme_override_styles/normal = SubResource("StyleBoxTexture_uvye1")
text = "event4"
script = ExtResource("7_o8tew")

[node name="TextureRect" type="TextureRect" parent="Button4"]
layout_mode = 0
offset_left = 60.6474
offset_top = -4.70973
offset_right = 152.647
offset_bottom = 39.2903

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 292.0
offset_right = 735.0
offset_bottom = 328.0
scale = Vector2(0.65955, 1.27396)
theme_override_fonts/font = ExtResource("2_jxggd")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_yxdqc")
theme_override_styles/hover = SubResource("StyleBoxTexture_uvye1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0af1l")
theme_override_styles/normal = SubResource("StyleBoxTexture_uvye1")
text = "event5"
script = ExtResource("8_w4ah8")

[node name="TextureRect" type="TextureRect" parent="Button5"]
layout_mode = 0
offset_left = 60.6474
offset_top = -4.70973
offset_right = 152.647
offset_bottom = 39.2903

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 538.0
offset_top = 402.0
offset_right = 620.0
offset_bottom = 458.0
theme_override_fonts/font = ExtResource("2_jxggd")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_bay67")
theme_override_styles/hover = SubResource("StyleBoxTexture_1vvlr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_aacpa")
theme_override_styles/normal = SubResource("StyleBoxTexture_1vvlr")
text = "Close"
script = ExtResource("9_40bqh")

[node name="ClickPressed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_hp1fr")

[node name="ClickHover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_xtfxa")

[connection signal="mouse_entered" from="Button1" to="Button1" method="_on_mouse_entered"]
[connection signal="pressed" from="Button1" to="Button1" method="_on_pressed"]
[connection signal="mouse_entered" from="Button2" to="Button2" method="_on_mouse_entered"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_pressed"]
[connection signal="mouse_entered" from="Button3" to="Button3" method="_on_mouse_entered"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_pressed"]
[connection signal="mouse_entered" from="Button4" to="Button4" method="_on_mouse_entered"]
[connection signal="pressed" from="Button4" to="Button4" method="_on_pressed"]
[connection signal="mouse_entered" from="Button5" to="Button5" method="_on_mouse_entered"]
[connection signal="pressed" from="Button5" to="Button5" method="_on_pressed"]
[connection signal="mouse_entered" from="CloseButton" to="CloseButton" method="_on_mouse_entered"]
[connection signal="pressed" from="CloseButton" to="CloseButton" method="_on_pressed"]
